<resources>
    <string name="app_name">StudyNote</string>
    <string name="enter">Enter</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_task">Enter Task</string>
    <string name="topic">Topic</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="delete">Delete Button</string>
    <string name="update_task">Update Button</string>

</resources>
